no todo: test hwredetect that uses some external file and a p4lang process to overcome the eth0-->eno1-->eth0 random changes, by mac and friends
---------------------------------- 2024-10-20 07:04:34 24.10.20
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-10-20 07:34:16 24.10.20
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-11-02 07:44:58 24.11.2
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-11-02 08:29:06 24.11.2
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-11-13 07:50:44 24.11.13
qc pass: p4lang: bridge filter access list
qc pass: p4lang: vlan bridge filter access list
---------------------------------- 2024-11-16 08:32:01 24.11.16
todo: traffic through bgp spf
---------------------------------- 2024-11-16 09:32:49 24.11.16
qc pass: unicast+spf over bgp
qc pass: unicast+spf over bgp with soft-reconfig
qc pass: unicast+spf over bgp with additional path
---------------------------------- 2024-11-17 18:01:02 24.11.17
qc pass: spf bgp in chain
---------------------------------- 2024-11-17 18:38:57 24.11.17
qc pass: spf bgp prefix withdraw
qc pass: spf bgp change in metric
---------------------------------- 2024-11-17 19:15:02 24.11.17
no todo: traffic through bgp spf
---------------------------------- 2024-11-18 07:42:36 24.11.18
qc pass: spf bgp change in tag
qc pass: spf bgp triangle connection
---------------------------------- 2024-11-18 18:55:38 24.11.18
todo: bgp spf to have sr and bier
---------------------------------- 2024-11-18 22:50:56 24.11.18
no todo: bgp spf to have sr and bier
todo: bgp spf to have hostname, sr and bier
---------------------------------- 2024-11-19 06:41:50 24.11.19
no todo: bgp spf to have hostname, sr and bier
todo: bgp spf to have sr and bier