@@ -34,6 +34,7 @@ import org.freertr.util.cmds;
 import org.freertr.util.debugger;
 import org.freertr.util.logger;
 import org.freertr.spf.spfCalc;
+import org.freertr.spf.spfLnkst;
 import org.freertr.util.state;
 
 /**
@@ -1280,7 +1281,7 @@ public class rtrOspf4 extends ipRtr {
         if (ara == null) {
             return;
         }
-        ara.lastSpf.listLinkStates(tab, 3, ara.area, asn, adv, addrIPv4.size, 2);
+        ara.lastSpf.listLinkStates(tab, spfLnkst.protoOspfV2, ara.area, asn, adv, addrIPv4.size, 2);
     }
 
 }
