@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.19-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-19 08:21:44, took 00:15:04, with 50 workers, on 3534 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2024-11-19 11:36:47, took 00:14:54, with 50 workers, on 3536 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3028,6 +3028,8 @@ http://sources.freertr.org/cfg/rout-bgp864.tst;rout-bgp864.tst;success;spf bgp p
 http://sources.freertr.org/cfg/rout-bgp865.tst;rout-bgp865.tst;success;spf bgp change in metric
 http://sources.freertr.org/cfg/rout-bgp866.tst;rout-bgp866.tst;success;spf bgp change in tag
 http://sources.freertr.org/cfg/rout-bgp867.tst;rout-bgp867.tst;success;spf bgp triangle connection
+http://sources.freertr.org/cfg/rout-bgp868.tst;rout-bgp868.tst;success;spf bgp default route
+http://sources.freertr.org/cfg/rout-bgp869.tst;rout-bgp869.tst;success;spf bgp ecmp connection
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
