@@ -3024,6 +3024,8 @@ qc pass: spf bgp prefix withdraw
 qc pass: spf bgp change in metric
 qc pass: spf bgp change in tag
 qc pass: spf bgp triangle connection
+qc pass: spf bgp default route
+qc pass: spf bgp ecmp connection
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
