@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.19-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-19 08:31:16, took 00:09:10, with 50 workers, on 619 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-11-19 11:46:31, took 00:09:22, with 50 workers, on 619 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
